<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp16"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainBiceps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biceps"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainTriceps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/triceps"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainShoulders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoulders"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainChest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainLegs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legs"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        app:cardElevation="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp16">
            <TextView
                android:id="@+id/textMainAbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abs"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>